# lunatic

./: .gitignore  .gitmodules  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASES.md  Readme.md  SECURITY.md  build.rs  deny.toml  flake.nix  run_tests_and_fmt.sh  test.sh
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-deny-pr.yml  ci.yml  homebrew.yml  release.yml  test.yml
benches/: benchmark.rs  instance_creation.rs  lunatic_benchmark.rs  start.wasm  with_main_bin.wasm
benches/guest/: build.sh  run.sh  start.wat
benches/wasm/: build.sh  run.sh  start.wasm
crates/hash-map-id/: Cargo.toml
crates/hash-map-id/src/: lib.rs
crates/lunatic-common-api/: Cargo.toml
crates/lunatic-common-api/src/: actor.rs  control.rs  distributed.rs  lib.rs  macros.rs
crates/lunatic-control/: Cargo.toml
crates/lunatic-control-axum/: Cargo.toml
crates/lunatic-control-axum/src/: api.rs  lib.rs  routes.rs  server.rs
crates/lunatic-control-submillisecond/: Cargo.toml  README.md
crates/lunatic-control-submillisecond/.cargo/: config.toml
crates/lunatic-control-submillisecond/src/: api.rs  host.rs  main.rs  routes.rs  server.rs
crates/lunatic-control-submillisecond/src/server/: store.rs
crates/lunatic-control/src/: api.rs  client.rs  lib.rs  message.rs  server.rs
crates/lunatic-distributed/: Cargo.toml
crates/lunatic-distributed-api/: Cargo.toml
crates/lunatic-distributed-api/src/: lib.rs
crates/lunatic-distributed/certs/: root.keys.pem  root.pem
crates/lunatic-distributed/src/: client.rs  connection.rs  guest_api.rs  lib.rs  message.rs  node.rs  server.rs
crates/lunatic-distributed/src/congestion/: mod.rs
crates/lunatic-distributed/src/control/: api.rs  cert.rs  client.rs  message.rs  mod.rs  parser.rs  server.rs
crates/lunatic-distributed/src/distributed/: client.rs  connection.rs  message.rs  mod.rs  node.rs  server.rs
crates/lunatic-distributed/src/quic/: mod.rs  quin.rs  s2n.rs  tcp.rs
crates/lunatic-error-api/: Cargo.toml
crates/lunatic-error-api/src/: lib.rs
crates/lunatic-messaging-api/: Cargo.toml
crates/lunatic-messaging-api/src/: lib.rs
crates/lunatic-metrics-api/: Cargo.toml
crates/lunatic-metrics-api/src/: lib.rs
crates/lunatic-networking-api/: Cargo.toml
crates/lunatic-networking-api/src/: dns.rs  lib.rs  tcp.rs  tls_tcp.rs  udp.rs
crates/lunatic-plugin/: Cargo.toml
crates/lunatic-plugin-internal/: Cargo.toml
crates/lunatic-plugin-internal/src/: lib.rs
crates/lunatic-plugin/src/: lib.rs
crates/lunatic-process/: Cargo.toml
crates/lunatic-process-api/: Cargo.toml
crates/lunatic-process-api/src/: lib.rs
crates/lunatic-process/src/: config.rs  env.rs  lib.rs  local_control.rs  local_dist.rs  mailbox.rs  message.rs  state.rs  wasm.rs
crates/lunatic-process/src/runtimes/: mod.rs  wasmtime.rs
crates/lunatic-registry-api/: Cargo.toml
crates/lunatic-registry-api/src/: lib.rs
crates/lunatic-sqlite-api/: Cargo.toml
crates/lunatic-sqlite-api/src/: lib.rs  sqlite_bindings.rs
crates/lunatic-sqlite-api/src/guest_api/: guest_bindings.rs  mod.rs
crates/lunatic-sqlite-api/src/wire_format/: encode.rs  mod.rs  parse.rs  sqlite_value.rs
crates/lunatic-sqlite-api/src/wire_format/bind_values/: host_api.rs  mod.rs
crates/lunatic-sqlite-api/src/wire_format/sqlite_value/: guest_api.rs  host_api.rs  mod.rs
crates/lunatic-stdout-capture/: Cargo.toml
crates/lunatic-stdout-capture/src/: lib.rs
crates/lunatic-timer-api/: Cargo.toml
crates/lunatic-timer-api/src/: lib.rs
crates/lunatic-trap-api/: Cargo.toml
crates/lunatic-trap-api/src/: lib.rs
crates/lunatic-version-api/: Cargo.toml
crates/lunatic-version-api/src/: lib.rs
crates/lunatic-wasi-api/: Cargo.toml
crates/lunatic-wasi-api/src/: lib.rs
documentation/: README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  theme.config.tsx
documentation/pages/: _meta.json  getting_started.mdx  index.mdx
examples/: README.md  native_process.rs
examples/counter-guest/: Cargo.toml
examples/counter-plugin/: Cargo.toml
plugins/heap_profiler/: Cargo.toml
plugins/stdlib/: Cargo.toml
rust-lib/: Cargo.toml  README.md
rust-lib/src/: ffi.rs  lib.rs
src/: async_map.rs  cargo_lunatic.rs  config.rs  environment.rs  lib.rs  library.rs  mailbox.rs  main.rs  message.rs  module.rs  node.rs  plugin.rs  process.rs  registry.rs  state.rs  test.wasm  test.wat  test_node.rs
src/api/: default.rs  error.rs  heap_profiler.rs  macros.rs  mailbox.rs  mod.rs  networking.rs  plugin.rs  process.rs  test.rs  version.rs  wasi.rs
src/channel/: api.rs  host_resources.rs  message.rs  mod.rs  (+1 more)
stdlib/: Cargo.toml  Readme.md
stdlib/rust/: Cargo.toml  Readme.md
stdlib/rust/src/: channel.rs  lib.rs  net.rs  process.rs
tests/: normalisation_patching_test.rs  normalisation_test.rs  patching.rs  reduction_counting_test.rs
uptown_funk/: .gitignore  Cargo.toml  Readme.md
uptown_funk/src/: lib.rs  memory.rs  state.rs  types.rs  wasmer.rs  wrap.rs
uptown_funk/src/types/: mod.rs  pointers.rs  primitive.rs  result.rs  status.rs
uptown_funk/tests/: add_test.rs  common.rs  custom_type_return_test.rs  custom_type_test.rs  ioslice_test.rs  multiple_namespaces_test.rs  multivalue_test.rs  mutable_state_test.rs  pointer_test.rs  ref_str_test.rs  trap_test.rs  wasmtime_add_test.rs  wasmtime_custom_type_reference_test.rs  wasmtime_custom_type_return_test.rs  wasmtime_custom_type_test.rs  wasmtime_ioslice_test.rs  wasmtime_multivalue_test.rs  wasmtime_mutable_state_test.rs  wasmtime_ref_str_test.rs
uptown_funk/tests/wasm/: build.sh  custom_types.rs  custom_types_ref.rs  custom_types_return.rs  ioslices.rs  multiple_namespaces.rs  multivalue.rs  mutable_state.rs  pointer.rs  ref_str.rs  trap.rs
uptown_funk/uptown_funk_macro/: Cargo.toml
uptown_funk/uptown_funk_macro/src/: attribute.rs  lib.rs  state_type.rs  wasmer_method.rs  wasmtime_method.rs
uptown_funk/uptown_funk_macro/src/signature/: inputs.rs  mod.rs  outputs.rs
wat/: all_imports.wat  hello.wat
(+126 files in other folders)
