[package]
name = "uptown_funk"
version = "0.1.3"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"
description = "Define host functions compatible with Wasmtime"
license = "Apache-2.0/MIT"
readme = "Readme.md"

[features]
default = []
vm-wasmtime = ["wasmtime", "uptown_funk_macro/vm-wasmtime"]
async = []

[dependencies]
smallvec = "1.6.1"
wasmtime = { version = "0.26", optional = true }
uptown_funk_macro = { version = "0.1", path = "./uptown_funk_macro" }
