[package]
name = "lunatic-common-api"
version = "0.12.0"
edition = "2021"
description = "Common functionality for building lunatic host function APIs."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-common-api"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
