[package]
name = "lunatic-common-api"
version = "0.12.0"
edition = "2021"
description = "Common functionality for building lunatic host function APIs."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-common-api"
license = "Apache-2.0/MIT"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
