[package]
name = "lunatic-control-axum"
version = "0.12.0"
edition = "2021"
description = "TBD"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
lunatic-distributed = { workspace = true }

anyhow = { workspace = true }
axum = { version = "0.6.1", features = ["json", "query", "macros", "multipart" ] }
base64-url = "1.4.13"
chrono = "0.4.23"
dashmap = { workspace = true }
getrandom = "0.2.8"
http = "0.2.8"
log = { workspace = true }
rcgen = "0.10"
serde = { workspace = true }
serde_json = "1.0.89"
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time", "fs"] }
tower-http = { version = "0.3.0", features = ["limit"] }
uuid = { workspace = true }
