[package]
name = "lunatic-control-axum"
version = "0.12.0"
edition = "2021"
description = "TBD"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
lunatic-control = { workspace = true }
lunatic-distributed = { workspace = true }

anyhow = { workspace = true }
axum = { version = "0.6", features = ["json", "query", "macros"] }
tower-http = { version = "0.3.0", features = ["limit"] }
base64-url = "1.4.13"
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
dashmap = { workspace = true }
getrandom = "0.2.8"
http = "0.2.8"
log = { workspace = true }
rcgen = "0.10"
serde = { workspace = true }
serde_json = "1.0.89"
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time", "fs"] }
uuid = { workspace = true }
