[package]
name = "lunatic-control-submillisecond"
version = "0.12.0"
edition = "2021"
description = "TBD"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
lunatic-control = { workspace = true }

anyhow = { workspace = true }
base64-url = "1.4.13"
bincode = { workspace = true }
chrono = { version = "0.4.23", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
dashmap = { workspace = true, features = ["serde"] }
getrandom = "0.2.8"
lunatic = { path = "../../../lunatic-rs" }
lunatic-log = { path = "../../../lunatic-log-rs" }
serde = { workspace = true }
serde_json = "1.0.89"
submillisecond = { git = "https://github.com/lunatic-solutions/submillisecond", features = [
  "json",
] }
uuid = { workspace = true }
