[package]
name = "lunatic-control"
version = "0.12.0"
edition = "2021"
description = "TBD"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
