[package]
name = "lunatic-distributed-api"
version = "0.12.0"
edition = "2021"
description = "A simple control server implementation"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic-common-api = { version = "0.12", path = "../lunatic-common-api" }
lunatic-distributed = { version = "0.12", path = "../lunatic-distributed" }
lunatic-error-api = { version = "0.12", path = "../lunatic-error-api" }
lunatic-process = { version = "0.12", path = "../lunatic-process" }
lunatic-process-api = { version = "0.12", path = "../lunatic-process-api" }

anyhow = "1.0"
async_cell = "0.2.1"
bincode = "1.3"
dashmap = "5.3.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20", features = ["macros", "net", "time"] }
wasmtime = "2" # managed by root Cargo.toml
