[package]
name = "lunatic-distributed-api"
version = "0.12.0"
edition = "2021"
description = "A simple control server implementation"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
lunatic-common-api = { workspace = true }
lunatic-distributed = { workspace = true }
lunatic-error-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

anyhow = { workspace = true }
bincode = { workspace = true }
rcgen = { version = "0.10", features = ["pem", "x509-parser"] }
rmp-serde = "1.1.1"
log = { workspace = true }
tokio = { workspace = true, features = ["time"] }
wasmtime = { workspace = true }
