[package]
name = "lunatic-distributed"
version = "0.13.2"
edition = "2021"
description = "Node to node communication"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0 OR MIT"

[dependencies]
lunatic-control = { workspace = true }
lunatic-process = { workspace = true }

anyhow = { workspace = true }
async_cell = "0.2.1"
rmp-serde = "1.1.1"
bytes = "1"
dashmap = { workspace = true }
log = { workspace = true }
quinn = { version = "0.10.2" }
rcgen = { version = "0.10", features = ["pem", "x509-parser"] }
reqwest = { workspace = true, features = ["json"] }
rustls = { version = "0.21.6" }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.89"
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
wasmtime = { workspace = true }
x509-parser = "0.14.0"
