[package]
name = "lunatic-error-api"
version = "0.9.0"
edition = "2021"
description = "Lunatic host functions that make dealing with Anyhow errors simpler."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
wasmtime = "^0.38"
hash-map-id = { version = "^0.9", path = "../hash-map-id" }
lunatic-common-api = { version = "^0.9", path = "../lunatic-common-api" }