[package]
name = "lunatic-error-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions that make dealing with Anyhow errors simpler."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }

anyhow = { workspace = true }
wasmtime = { workspace = true }
