[package]
name = "lunatic-messaging-api"
version = "0.13.2"
edition = "2021"
description = "Lunatic host functions for message sending."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-messaging-api"
license = "Apache-2.0 OR MIT"

[dependencies]
lunatic-common-api = { workspace = true }
lunatic-networking-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["time"] }
wasmtime = { workspace = true }
