[package]
name = "lunatic-metrics-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for metrics"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-metrics"
license = "Apache-2.0/MIT"

[dependencies]
anyhow = { workspace = true }
hash-map-id = { workspace = true }
log = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }
opentelemetry = { workspace = true }
serde_json = "1.0"
metrics = { workspace = true }
wasmtime = { workspace = true }
