[package]
name = "lunatic-metrics-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for metrics"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-metrics"
license = "Apache-2.0/MIT"

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
serde_json = "1.0"
wasmtime = { workspace = true }
