[package]
name = "lunatic-metrics-api"
version = "0.13.2"
edition = "2021"
description = "Lunatic host functions for metrics"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-metrics"
license = "Apache-2.0/MIT"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
metrics = { workspace = true }
lunatic-common-api = { workspace = true }
log = { workspace = true }
