[package]
description = "Lunatic host functions for tcp and udp networking."
edition = "2021"
homepage = "https://lunatic.solutions"
license = "Apache-2.0/MIT"
name = "lunatic-networking-api"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-networking-api"
version = "0.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-map-id = { version = "0.12", path = "../hash-map-id" }
lunatic-common-api = { version = "0.12", path = "../lunatic-common-api" }
lunatic-error-api = { version = "0.12", path = "../lunatic-error-api" }

anyhow = "1.0"
rustls-pemfile = { version = "1.0" }
tokio = { version = "1.20", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "net",
  "time",
  "io-util",
] }
tokio-rustls = "0.23.4"
wasmtime = "2" # managed by root Cargo.toml
webpki-roots = "0.22.0"
