[package]
description = "Lunatic host functions for tcp and udp networking."
edition = "2021"
homepage = "https://lunatic.solutions"
license = "Apache-2.0/MIT"
name = "lunatic-networking-api"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-networking-api"
version = "0.12.0"

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-error-api = { workspace = true }

anyhow = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "sync", "time"] }
tokio-rustls = "0.23.4"
wasmtime = { workspace = true }
webpki-roots = "0.22.0"
