[package]
name = "lunatic-plugin-internal"
version = "0.10.0"
edition = "2021"
description = "Lunatic plugins system."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
wasmtime = "^2" # managed by root Cargo.toml
libloading = "0.7"
