[package]
name = "lunatic-plugin"
version = "0.12.0"
edition = "2021"
description = "Lunatic plugins system."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates"
license = "Apache-2.0/MIT"

[dependencies]
lunatic-plugin-internal = { workspace = true }
lunatic-runtime = { workspace = true }

anyhow = { workspace = true }
wasmtime = { workspace = true }
