[package]
name = "lunatic-process-api"
version = "0.9.0"
edition = "2021"
description = "Lunatic host functions for working with processes."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-process-api"
license = "Apache-2.0/MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
wasmtime = "^0.37"
tokio = { version = "^1.14", features = ["macros", "time"] }
hash-map-id = { version = "^0.9", path = "../hash-map-id" }
lunatic-stdout-capture = { version = "^0.9", path = "../lunatic-stdout-capture" }
lunatic-process = { version = "^0.9", path = "../lunatic-process" }
lunatic-common-api = { version = "^0.9", path = "../lunatic-common-api" }
lunatic-error-api = { version = "^0.9", path = "../lunatic-error-api" }
lunatic-wasi-api = { version = "^0.9", path = "../lunatic-wasi-api" }