[package]
name = "lunatic-process-api"
version = "0.12.0"
edition = "2021"
description = "Lunatic host functions for working with processes."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-process-api"
license = "Apache-2.0/MIT"

[features]
metrics = ["dep:metrics"]

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-error-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-wasi-api = { workspace = true }

anyhow = { workspace = true }
metrics = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"] }
wasmtime = { workspace = true }
