[package]
name = "lunatic-process"
version = "0.12.0"
edition = "2021"
description = "Lunatic's core process, mailbox and message abstraction'"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-process"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metrics = ["dep:metrics"]

# Disabled by default as it will usually lead to giant metrics exports
detailed_metrics = ["metrics"]

[dependencies]
hash-map-id = { version = "0.12", path = "../hash-map-id" }
lunatic-networking-api = { version = "0.12", path = "../lunatic-networking-api" }

anyhow = "1.0"
dashmap = "5.3.4"
log = "0.4"
metrics = { version = "0.20.1", optional = true }
serde = "1.0"
tokio = { version = "1.20", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
] }
wasmtime = "2" # managed by root Cargo.toml
