[package]
name = "lunatic-process"
version = "0.12.0"
edition = "2021"
description = "Lunatic's core process, mailbox and message abstraction'"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-process"
license = "Apache-2.0/MIT"

[features]
metrics = ["dep:metrics"]

# Disabled by default as it will usually lead to giant metrics exports
detailed_metrics = ["metrics"]

[dependencies]
hash-map-id = { workspace = true }
lunatic-networking-api = { workspace = true }

anyhow = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
metrics = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "net",
] }
wasmtime = { workspace = true }
