[package]
name = "lunatic-process"
version = "0.13.0"
edition = "2021"
description = "Lunatic's core process, mailbox and message abstraction'"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-process"
license = "Apache-2.0/MIT"

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-networking-api = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1.58"
dashmap = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true }
smallvec = "1.10"
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "net",
] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
